# Volumetric-Clouds

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  Volumetric_Clouds.sln  Volumetric_Clouds.vcxproj
.github/: FUNDING.yml
Volumetric Clouds/64/: lin.xpl
Volumetric Clouds/shaders/: fragment_shader.glsl  vertex_shader.glsl
Volumetric_Clouds/: Enhanced_Cloudscapes
Volumetric_Clouds/64/: lin.xpl  win.xpl
Volumetric_Clouds/init/scripts/smooth_weather/: smooth_weather.lua
Volumetric_Clouds/scripts/smooth_weather/: smooth_weather.lua
Volumetric_Clouds/shaders/: fragment_shader.glsl  vertex_shader.glsl
include/: dataref_helpers.hpp  opengl_helpers.hpp
libpng/lib/: libpng16.lib
src/: dataref_helpers.cpp  opengl_helpers.cpp  volumetric_clouds.cpp
